Home page design

--- a/app/locale/he_IL/Mage_Page.csv
+++ b/app/locale/he_IL/Mage_Page.csv
@@ -160,3 +160,5 @@
 "Watch products","לצפייה במוצרים"
 "Making Time","זמן הכנה"
 "minutes","דקות"
+"Kosher Lemehadein","כשר למהדרין"
+"Need help? Call","צריכים עזרה? התקשרו"
