--- a/app/locale/he_IL/Mage_Page.csv
+++ b/app/locale/he_IL/Mage_Page.csv
@@ -162,3 +162,6 @@
 "minutes","דקות"
 "Kosher Lemehadein","כשר למהדרין"
 "Need help? Call","צריכים עזרה? התקשרו"
+"Read More","לקריאה נוספת"
+"Show All","לצפייה בכולם"
+"Read Recipe","לקריאת המתכון"
