--- a/app/locale/he_IL/Mage_Checkout.csv
+++ b/app/locale/he_IL/Mage_Checkout.csv
@@ -271,3 +271,4 @@
 "To Shopping Bag","לסל הקניות"
 "To Checkout","לקופה"
 "Do you have a discount coupon?","יש ברשותך קופון הנחה?"
+"Additional Products","מוצרים משלימים"
