Site last commit before upload to server

--- a/app/locale/he_IL/Mage_Page.csv
+++ b/app/locale/he_IL/Mage_Page.csv
@@ -165,3 +165,6 @@
 "Read More","לקריאה נוספת"
 "Show All","לצפייה בכולם"
 "Read Recipe","לקריאת המתכון"
+"How did you get here?","איך הגעתם לכאן?"
+"This is really rare","זה ממש נדיר"
+"Nees help?","צריכים עזרה?"
